# Proyecto-de-prog2

./: Diseño proyecto.docx  Proyecto Programacion 2 Damaris Tavia, Francisco Albarracin y Nicolas Gomez.rar
CLION/: CMakeLists.txt  clion.txt  ejecutable  main.cpp
CLION/librerias/: barco.cpp  barco.h  casilla.cpp  casilla.h  coordenada.cpp  coordenada.h  jugador.cpp  jugador.h  librerias.txt  sistema.cpp  sistema.h  tablero.cpp  tablero.h
